# SRGGE

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  run.sh
cmake_modules/: FindGLM.cmake
doc/: .gitignore  plot.py
headers/: Application.h  BasicScene.h  CalcLOD.h  CalcOcclusionMap.h  Camera.h  Debug.h  DebugDisplay.h  Define.h  KdTree.h  ManagerLOD.h  Mesh.h  Museum.h  Occlusion.h  Octree.h  PLYReader.h  Player.h  Scene.h  Shader.h  ShaderProgram.h  TextRender.h  TileMapLoader.h  TriangleMesh.h
models/: .gitignore  ground.ply  wall.ply
resources/: big_grid.txt  big_line.txt  big_museum.txt  min_museum.txt  nano_museum.txt  small_museum.txt  test.txt
shaders/: basic.frag  basic.vert
src/: Application.cpp  BasicScene.cpp  CalcLOD.cpp  CalcOcclusionMap.cpp  Camera.cpp  Debug.cpp  DebugDisplay.cpp  KdTree.cpp  ManagerLOD.cpp  Mesh.cpp  Museum.cpp  Occlusion.cpp  Octree.cpp  PLYReader.cpp  Player.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  TextRender.cpp  TileMapLoader.cpp  TriangleMesh.cpp
